.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
10:35:25 **** Rebuild of configuration Debug for project sum-numbers-c ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:17:32: error: 'fnum_2' undeclared (first use in this function); did you mean 'f_num_2'?
   17 |         scanf("%f %f",&fnum_1,&fnum_2) ;
      |                                ^~~~~~
      |                                f_num_2
..\main.c:17:32: note: each undeclared identifier is reported only once for each function it appears in
..\main.c:18:33: error: 'i_num_2' undeclared (first use in this function); did you mean 'f_num_2'?
   18 |         printf("%d %d\n",inum_1+i_num_2 ,inum_1-i_num_2 )
      |                                 ^~~~~~~
      |                                 f_num_2
..\main.c:18:58: error: expected ';' before 'printf'
   18 |         printf("%d %d\n",inum_1+i_num_2 ,inum_1-i_num_2 )
      |                                                          ^
      |                                                          ;
   19 |         printf("%.1f %.1f\n",fnum_1+f_num_2 ,fnum_1-f_num_2 )
      |         ~~~~~~                                            
..\main.c:15:24: warning: unused variable 'f_num_2' [-Wunused-variable]
   15 |         float fnum_1 , f_num_2  ;
      |                        ^~~~~~~
10:36:03 **** Incremental Build of configuration Debug for project sum-numbers-c ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:17:32: error: 'fnum_2' undeclared (first use in this function); did you mean 'f_num_2'?
   17 |         scanf("%f %f",&fnum_1,&fnum_2) ;
      |                                ^~~~~~
      |                                f_num_2
..\main.c:17:32: note: each undeclared identifier is reported only once for each function it appears in
..\main.c:18:48: error: 'i_num_2' undeclared (first use in this function); did you mean 'f_num_2'?
   18 |         printf("%d %d\n",inum_1+inum_2 ,inum_1-i_num_2 )
      |                                                ^~~~~~~
      |                                                f_num_2
..\main.c:18:57: error: expected ';' before 'printf'
   18 |         printf("%d %d\n",inum_1+inum_2 ,inum_1-i_num_2 )
      |                                                         ^
      |                                                         ;
   19 |         printf("%.1f %.1f\n",fnum_1+f_num_2 ,fnum_1-f_num_2 )
      |         ~~~~~~                                           
..\main.c:15:24: warning: unused variable 'f_num_2' [-Wunused-variable]
   15 |         float fnum_1 , f_num_2  ;
      |                        ^~~~~~~
10:36:10 **** Incremental Build of configuration Debug for project sum-numbers-c ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:17:32: error: 'fnum_2' undeclared (first use in this function); did you mean 'f_num_2'?
   17 |         scanf("%f %f",&fnum_1,&fnum_2) ;
      |                                ^~~~~~
      |                                f_num_2
..\main.c:17:32: note: each undeclared identifier is reported only once for each function it appears in
..\main.c:18:48: error: 'i_num_2' undeclared (first use in this function); did you mean 'f_num_2'?
   18 |         printf("%d %d\n",inum_1+inum_2 ,inum_1-i_num_2 )
      |                                                ^~~~~~~
      |                                                f_num_2
..\main.c:18:57: error: expected ';' before 'printf'
   18 |         printf("%d %d\n",inum_1+inum_2 ,inum_1-i_num_2 )
      |                                                         ^
      |                                                         ;
   19 |         printf("%.1f %.1f\n",fnum_1+f_num_2 ,fnum_1-f_num_2 )
      |         ~~~~~~                                           
..\main.c:15:24: warning: unused variable 'f_num_2' [-Wunused-variable]
   15 |         float fnum_1 , f_num_2  ;
      |                        ^~~~~~~
10:36:27 **** Incremental Build of configuration Debug for project sum-numbers-c ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:17:32: error: 'fnum_2' undeclared (first use in this function); did you mean 'f_num_2'?
   17 |         scanf("%f %f",&fnum_1,&fnum_2) ;
      |                                ^~~~~~
      |                                f_num_2
..\main.c:17:32: note: each undeclared identifier is reported only once for each function it appears in
..\main.c:18:56: error: expected ';' before 'printf'
   18 |         printf("%d %d\n",inum_1+inum_2 ,inum_1-inum_2 )
      |                                                        ^
      |                                                        ;
   19 |         printf("%.1f %.1f\n",fnum_1+f_num_2 ,fnum_1-f_num_2 )
      |         ~~~~~~                                          
..\main.c:15:24: warning: unused variable 'f_num_2' [-Wunused-variable]
   15 |         float fnum_1 , f_num_2  ;
      |                        ^~~~~~~
10:36:43 **** Incremental Build of configuration Debug for project sum-numbers-c ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:18:56: error: expected ';' before 'printf'
   18 |         printf("%d %d\n",inum_1+inum_2 ,inum_1-inum_2 )
      |                                                        ^
      |                                                        ;
   19 |         printf("%.1f %.1f\n",fnum_1+f_num_2 ,fnum_1-f_num_2 )
      |         ~~~~~~                                          
10:36:53 **** Incremental Build of configuration Debug for project sum-numbers-c ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:19:37: error: 'f_num_2' undeclared (first use in this function); did you mean 'fnum_2'?
   19 |         printf("%.1f %.1f\n",fnum_1+f_num_2 ,fnum_1-f_num_2 ) ;
      |                                     ^~~~~~~
      |                                     fnum_2
..\main.c:19:37: note: each undeclared identifier is reported only once for each function it appears in
10:37:03 **** Incremental Build of configuration Debug for project sum-numbers-c ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
..\main.c: In function 'main':
..\main.c:19:37: error: 'f_num_2' undeclared (first use in this function); did you mean 'fnum_2'?
   19 |         printf("%.1f %.1f\n",fnum_1+f_num_2 ,fnum_1-fnum_2 ) ;
      |                                     ^~~~~~~
      |                                     fnum_2
..\main.c:19:37: note: each undeclared identifier is reported only once for each function it appears in
10:37:19 **** Incremental Build of configuration Debug for project sum-numbers-c ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main.o "..\\main.c" 
gcc -o sum-numbers-c.exe main.o 
Info: Nothing to build for sum-numbers-c
Info: Nothing to build for sum-numbers-c
